hphp/hack/test/extended_reasons/unsafe_cast_assign.php.exp
error: Typing[4110] Invalid argument

File unsafe_cast_assign.php, line 8, character 15 - line 8, character 16:

 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 7 |   $y = $x;
 8 |   expects_int(»$y«);
 9 | }

Expected int

File unsafe_cast_assign.php, line 3, character 22 - line 3, character 24:

 1 | <?hh
 2 | 
 3 | function expects_int(»int« $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>("hello");

But got bool because the expression went through a HH\FIXME\UNSAFE_CAST. The type might be a lie!

File unsafe_cast_assign.php, line 6, character 8 - line 6, character 50:

 5 | function foo(): void {
 6 |   $x = »HH\FIXME\UNSAFE_CAST<string, bool>("hello")«;
 7 |   $y = $x;
 8 |   expects_int($y);
 9 | }

Here's why:


  Step 1 of 3                                                                   

I started by checking this subtype relationship.

The subtype comes from this function or method declaration

File unsafe_cast_assign.php, line 3, character 10 - line 3, character 20:

 1 | <?hh
 2 | 
 3 | function »expects_int«(int $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>("hello");

The supertype comes from this expression

File unsafe_cast_assign.php, line 8, character 3 - line 8, character 17:

 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 7 |   $y = $x;
 8 |   »expects_int($y)«;
 9 | }


  Step 2 of 3                                                                   

These are function types so next I checked the 1st function parameters.
Functions are contravariant in their parameters so the direction of the subtype relationship is reversed.

The subtype comes from this expression

File unsafe_cast_assign.php, line 6, character 43 - line 6, character 49:

 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>(»"hello"«);
 7 |   $y = $x;
 8 |   expects_int($y);
 9 | }

and flows into this element

File unsafe_cast_assign.php, line 6, character 8 - line 6, character 50:

 5 | function foo(): void {
 6 |   $x = »HH\FIXME\UNSAFE_CAST<string, bool>("hello")«;
 7 |   $y = $x;
 8 |   expects_int($y);
 9 | }

through an UNSAFE_CAST

which itself flows into this expression

File unsafe_cast_assign.php, line 6, character 3 - line 6, character 4:

 5 | function foo(): void {
 6 |   »$x« = HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 7 |   $y = $x;
 8 |   expects_int($y);
 9 | }

via an assignment

which itself flows into this expression

File unsafe_cast_assign.php, line 7, character 8 - line 7, character 9:

 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 7 |   $y = »$x«;
 8 |   expects_int($y);
 9 | }

as the type of the local variable

which itself flows into this expression

File unsafe_cast_assign.php, line 7, character 3 - line 7, character 4:

 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 7 |   »$y« = $x;
 8 |   expects_int($y);
 9 | }

via an assignment

which itself flows into this expression

File unsafe_cast_assign.php, line 8, character 15 - line 8, character 16:

 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 7 |   $y = $x;
 8 |   expects_int(»$y«);
 9 | }

as the type of the local variable

The supertype comes from this hint

File unsafe_cast_assign.php, line 3, character 22 - line 3, character 24:

 1 | <?hh
 2 | 
 3 | function expects_int(»int« $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>("hello");


  Step 3 of 3                                 (here is where the error occurred) 

The subtype is a union type so next I checked the subtype constraint is satisfied for all its elements.

The subtype comes from this expression

File unsafe_cast_assign.php, line 6, character 43 - line 6, character 49:

 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>(»"hello"«);
 7 |   $y = $x;
 8 |   expects_int($y);
 9 | }

and flows into this element

File unsafe_cast_assign.php, line 6, character 8 - line 6, character 50:

 5 | function foo(): void {
 6 |   $x = »HH\FIXME\UNSAFE_CAST<string, bool>("hello")«;
 7 |   $y = $x;
 8 |   expects_int($y);
 9 | }

through an UNSAFE_CAST

The supertype is the same as before.

File unsafe_cast_assign.php, line 3, character 22 - line 3, character 24:

 1 | <?hh
 2 | 
 3 | function expects_int(»int« $_): void {}
 4 | 
 5 | function foo(): void {
 6 |   $x = HH\FIXME\UNSAFE_CAST<string, bool>("hello");

